# myend

./: .env.example  .gitignore  .pdm.toml  app.py  azure-pipelines.yml  docker-compose.yaml  main.py  pyproject.toml  readme.md  requirements.txt  run.bat  todo.md
flask_s/: .dockerignore  Dockerfile  alembic.ini  api_documentation.md  app.py  dockerfile  pyproject.toml  readme.md  requirements.txt  run.bat  run.sh
flask_s/alembic/: env.py
flask_s/alembic/versions/: 457241d78802_initial_migration.py  7664a9480894_update_db.py
flask_s/app01/: myfuncs.py  route.py
flask_s/app01/apis/: geng.py
flask_s/app01/apis/d1/: d1.py
flask_s/app01/apis/datas/: view_data.py
flask_s/app01/apis/email/: view_email.py
flask_s/app01/apis/end1/: view_end1.py
flask_s/app01/apis/files/: view_files.py  view_files2.py
flask_s/app01/apis/files2/: view_files.py
flask_s/app01/apis/olds/: readme.md
flask_s/app01/apis/online/: online.py
flask_s/app01/apis/pays/: payindex.py
flask_s/app01/apis/qita/: ddns.py
flask_s/configs/: config.yaml  x.json
flask_s/data/: nei.txt  匿名.txt
flask_s/entities/: data_saves.py  models.py  mydatabase.db  mymongo.py  mypgsql copy.py  mypgsql.py  mysqlite1.py  pgmodels.py  t1.py  to_db.py  ysqlite.py
flask_s/static/: down_files.html  temp.html  up_file.html
flask_s/static/css/: app.css
flask_s/static/jinja_templates/: 404.html  admin.html  anypay.html  down.html  down_ok.html  geng copy.html  geng.html  index.html  index2.html  login.html  msg1_1.html  msg1_add.html  msg1_del.html  msg2_1.html  page_end.html  payok.html  register.html  up_file.html
flask_s/tests/: test_files2_password.py  test_mypgsql_url.py
flask_s/utils/: core.py  cos.py  database.py  db.py  extensions.py  factory.py  ip_location.py  login1.py  send_email.py  up_dns.py  up_req.py  webpy.py  yz.py
(+20 files in other folders)
