[project]
name = "myend"
version = "0.1.0"
description = "Personal Flask backend service"
readme = "1readme.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
    { name = "pscly", email = "pscly@outlook.com" },
]
dependencies = [
    "addict",
    "bcrypt",
    "blinker",
    "cachetools",
    "certifi",
    "charset-normalizer",
    "click",
    "colorama",
    "crypto",
    "cssselect",
    "cssutils",
    "DingtalkChatbot",
    "dnspython",
    "Flask",
    "Flask-Login",
    "greenlet",
    "gunicorn",
    "idna",
    "itsdangerous",
    "Jinja2",
    "lxml",
    "MarkupSafe",
    "more-itertools",
    "Naked",
    "premailer",
    "psycopg[binary]",
    "pyaml-env",
    "pycryptodome",
    "pymongo",
    "PyYAML",
    "requests",
    "shellescape",
    "SQLAlchemy",
    "tencentcloud-sdk-python",
    "typing_extensions",
    "urllib3",
    "Werkzeug",
    "wincertstore",
    "yagmail",
]

[tool.uv]
package = false

default-groups = []
